--- a/src/custom.tmpl
+++ b/src/custom.tmpl
@@ -117,8 +117,8 @@ async def custom_site():
         total = track.len or 10  # avoid div0
         slot = ux(.060)/ total # 60%
 
-        pygame.draw.rect(screen,(0,0,0),( marginx-ux(10), marginy-uy(10), (total*slot)+ux(20), uy(110) ), width=10, border_radius=16 )
-        pygame.draw.rect(screen,(255,255,255), ( marginx, marginy, track.pos*slot, uy(90)), border_radius=16)
+        pygame.draw.rect(screen,(255,255,255),( marginx-ux(10), marginy-uy(10), (total*slot)+ux(20), uy(110) ), width=10, border_radius=16 )
+        pygame.draw.rect(screen,(255,0,255), ( marginx, marginy, track.pos*slot, uy(90)), border_radius=16)
 
     # wait until zip mount + overlayfs is complete
     while not track.ready:
@@ -151,7 +151,7 @@ async def custom_site():
 
 
     # now make a prompt
-    fnt = pygame.font.Font("res/joystix.ttf",  uy(80) )
+    fnt = pygame.font.Font("assets/joystix.ttf",  uy(80) )
 
     def ui_callback(pkg, error=None):
         nonlocal fnt
@@ -166,12 +166,12 @@ async def custom_site():
     # test/wait if user media interaction required
     if not platform.window.MM.UME:
         # credits
-        fns = pygame.font.Font("res/joystix.ttf", uy(20))
+        fns = pygame.font.Font("assets/joystix.ttf", uy(20))
         credits = fns.render("Made using Pygame-ce\nAssembled for web using Pygbag", False, "white")
         screen.blit(credits, (0, 0) )
 
         # now make a prompt
-        fnt = pygame.font.Font("res/joystix.ttf",  uy(80) )
+        fnt = pygame.font.Font("assets/joystix.ttf",  uy(80) )
         prompt = fnt.render("CLICK TO START", False, "black")
         pg_bar(track.len)
         screen.blit(prompt, ( marginx+ ux(100), marginy - uy(10) ) )
