--- a/src/custom.tmpl
+++ b/src/custom.tmpl
@@ -6,29 +6,31 @@ Loading {{cookiecutter.title}} from {{cookiecutter.archive}}.apk
     Template Version : 0.9.3
     Python  : {{cookiecutter.PYBUILD}}
     CDN URL : {{cookiecutter.cdn}}
-    Screen  : {{cookiecutter.width}}x{{cookiecutter.height}}
+    Screen  : {{cookiecutter.width}} x {{cookiecutter.height}}
     Title   : {{cookiecutter.title}}
     Folder  : {{cookiecutter.directory}}
     Authors : {{cookiecutter.authors}}
     SPDX-License-Identifier: {{cookiecutter.spdx}}
-
 """)
 
+
 # screen pixels (real, hardware)
-WIDTH=1024  # {{cookiecutter.width}}
-HEIGHT=600  # {{cookiecutter.height}}
+WIDTH = 1024  # {{cookiecutter.width}}
+HEIGHT = 600  # {{cookiecutter.height}}
 
 # reference/idealized screen pixels
 REFX = 1980
 REFY = 1080
 
+
 def u(real, ref, v):
-    if abs(v)<0.9999999:
-        result = int( (float(real)/100.0) * (v*1000))
-        if v<0:
+    if abs(v) < 0.9999999:
+        result = int((float(real)/100.0) * (v*1000))
+        if v < 0:
             return real-result
         return result
-    return int( (real/ref) * v )
+    return int((real/ref) * v)
+
 
 def ux(*argv):
     global WIDTH, REFX
@@ -37,6 +39,7 @@ def ux(*argv):
         acc += u(WIDTH, REFX, v)
     return acc
 
+
 def uy(*argv):
     global HEIGHT, REFY
     acc = 0
@@ -44,19 +47,19 @@ def uy(*argv):
         acc += u(HEIGHT, REFY, v)
     return acc
 
+
 # do not rename
 async def custom_site():
     import sys
     import asyncio
     import platform
     import json
+    import embed
+    import pygame
     from pathlib import Path
 
-    import embed
 
     platform.document.body.style.background = "#101010"
-
-    import pygame
 
     def compose():
         pygame.display.update()
@@ -65,9 +68,9 @@ async def custom_site():
     pygame.init()
     pygame.font.init()
 
-    screen = pygame.display.set_mode([ux(.100),uy(.100)], pygame.SRCALPHA, 32)
-    screen.set_colorkey( (0,0,0,0), pygame.RLEACCEL )
-    screen.fill( (0,0,0,0) )
+    screen = pygame.display.set_mode([ux(.100), uy(.100)], pygame.SRCALPHA, 32)
+    screen.set_colorkey((0, 0, 0, 0), pygame.RLEACCEL)
+    screen.fill((0, 0, 0, 0))
 
     compose()
 
@@ -75,38 +78,35 @@ async def custom_site():
     platform.window.canvas.style.visibility = "visible"
 
     apk = "{{cookiecutter.archive}}.apk"
-
     bundle = "{{cookiecutter.archive}}"
 
     # the C or js loader could do that but be explicit.
-    appdir = Path(f"/data/data/{bundle}") # /data/data/{{cookiecutter.archive}}
+    # /data/data/{{cookiecutter.archive}}
+    appdir = Path(f"/data/data/{bundle}")
     appdir.mkdir()
 
     # mount apk
-
     cfg = {
         "io": "url",
-        "type":"mount",
-        "mount" : {
-            "point" : appdir.as_posix(),
-            "path" : "/",
+        "type": "mount",
+        "mount": {
+            "point": appdir.as_posix(),
+            "path": "/",
         },
-        "path" : f"/ => {appdir.as_posix()}",
+        "path": f"/ => {appdir.as_posix()}",
     }
 
     track = platform.window.MM.prepare(apk, json.dumps(cfg))
 
-    marginx = ux(.020) # 20%
-    marginy = uy(.045) # 45%
-
     def pg_bar(pos):
-        nonlocal marginx, marginy
         # resolution of progress bar, recalculate since it may not be know yet.
         total = track.len or 10  # avoid div0
-        slot = ux(.060)/ total # 60%
+        slot = ux(.100) / total  # 100%
 
-        pygame.draw.rect(screen,(255,255,255),( marginx-ux(10), marginy-uy(10), (total*slot)+ux(20), uy(110) ), width=10, border_radius=16 )
-        pygame.draw.rect(screen,(255,0,255), ( marginx, marginy, track.pos*slot, uy(90)), border_radius=16)
+        pygame.draw.rect(screen, (255, 255, 255),
+                         (0, uy(.100) - 40, total * slot, 20))
+        pygame.draw.rect(screen, (255, 0, 255),
+                         (0, uy(.100) - 40, track.pos * slot, 20))
 
     # wait until zip mount + overlayfs is complete
     while not track.ready:
@@ -119,11 +119,11 @@ async def custom_site():
     compose()
 
     # preloader will change dir and prepend it to sys.path
-    platform.run_main(PyConfig, loaderhome= appdir / "assets", loadermain=None)
+    platform.run_main(PyConfig, loaderhome=appdir / "assets", loadermain=None)
 
     # wait preloading complete
     # that includes images and wasm compilation of bundled modules
-    while embed.counter()<0:
+    while embed.counter() < 0:
         await asyncio.sleep(.1)
 
     main = appdir / "assets" / "main.py"
@@ -136,7 +136,7 @@ async def custom_site():
     __import__(__name__).__file__ = str(main)
 
     # now make a prompt
-    fnt = pygame.font.Font("assets/joystix.ttf",  uy(80) )
+    fnt = pygame.font.Font("assets/joystix.ttf",  uy(40))
 
     def ui_callback(pkg, error=None):
         nonlocal fnt
@@ -145,37 +145,38 @@ async def custom_site():
         else:
             prompt = fnt.render(f"Setting [{pkg}] up", False, "red")
         pg_bar(track.len)
-        screen.blit(prompt, ( marginx+ ux(80), marginy - uy(10) ) )
+        screen.blit(prompt, (ux(100), uy(100)))
         compose()
 
     # test/wait if user media interaction required
     if not platform.window.MM.UME:
         # credits
         fns = pygame.font.Font("assets/joystix.ttf", uy(20))
-        credits = fns.render("Made using Pygame-ce\nAssembled for web using Pygbag", False, "white")
-        screen.blit(credits, (0, 0) )
+        credits_str = f"MADE USING PYGAME-CE. PACKAGED FOR WEB USING PYGBAG"
+        credits = fns.render(credits_str, False, (100, 100, 100))
+        w = credits.get_width()
+        h = credits.get_height()
+        screen.blit(credits, (ux(0.050) - w / 2, uy(0.100) - h))
 
         # now make a prompt
-        fnt = pygame.font.Font("assets/joystix.ttf",  uy(80) )
-        prompt = fnt.render("CLICK TO START", False, "black")
+        prompt = fnt.render("CLICK ANYWHERE TO START!", False, (255, 255, 255))
+        w = prompt.get_width()
+        h = prompt.get_height()
         pg_bar(track.len)
-        screen.blit(prompt, ( marginx+ ux(100), marginy - uy(10) ) )
+        screen.blit(prompt, (ux(.050) - w / 2, uy(.050) - h / 2))
         compose()
-        print("""
-        * Waiting for media user engagement : please click/touch page *
-    """)
+        print("""* Waiting for media user engagement : please click/touch page *""")
         while not platform.window.MM.UME:
             await asyncio.sleep(.1)
 
     # cleanup
-    screen.fill( (0,0,0,0) )
+    screen.fill((0, 0, 0, 0))
     pygame.display.flip()
 
     await shell.runpy(main, callback=ui_callback)
 
-import asyncio
 
-asyncio.run( custom_site() )
+asyncio.run(custom_site())
 
 
 # BEGIN BLOCK
@@ -245,12 +246,13 @@ config = {
             margin-top: 20px;
             margin-left: 30px;
             font-weight: bold;
-            color: rgb(255, 255, 255);
+            color: rgb(255, 0, 255);
         }
 
         #progress {
             height: 20px;
             width: 300px;
+            color: rgb(0, 255, 255);
         }
 
         div.emscripten { text-align: center; }
