move some constants to globals

--- a/src/custom.tmpl
+++ b/src/custom.tmpl
@@ -267,10 +267,9 @@ config = {
             width: 100%;
             height: 100%;
             z-index: 5;
-
             padding: 0;
             margin: 0 auto;
-
+            outline: none;
             position: absolute;
             top: 0;
             bottom: 0;
@@ -332,9 +331,7 @@ config = {
     </div>
 
 
-    <canvas class="emscripten" id="canvas"
-width="1px"
-height="1px"
+    <canvas class="emscripten" id="canvas" width="1px" height="1px"
     oncontextmenu="event.preventDefault()" tabindex=1>
     </canvas>
 
